fix: button state hover lock on mobile fix: redirect unmatched paths fix: fix StarBackground not drawing stars on location change

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -6,10 +6,13 @@
     background-color: $bg;
     border: 3px solid $border;
 
-    &:hover
+    @media (hover: hover) and (pointer: fine)
     {
-        color: $bg;
-        background-color: $text;
+        &:hover
+        {
+            color: $bg;
+            background-color: $text;
+        }
     }
 }
 
